1，处理Gradle原因App编译不通过的问题。 2，改类名，实现添加的MainActivity跳转原来的Text2Img和跳转Shh2Img。

--- a/app/src/main/res/layout/activity_first.xml
+++ b/app/src/main/res/layout/activity_first.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:orientation="vertical"
-    tools:context=".main.FirstActivity"
+    tools:context=".main.MainActivity"
     >
 
     <LinearLayout
