--- a/app/src/main/res/layout/activity_t.xml
+++ b/app/src/main/res/layout/activity_t.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.ShhActivity">
+    tools:context=".main.Shh2ImageActivity">
 
     <textimagemaker.hooyee.com.textimagemaker.main.MyView
         android:id="@+id/myyView"
